# acts-gsf-scripts

./: .gitignore  .gitmodules  CMakeLists.txt  analyse_atlas_parameterization.ipynb  analysis.py  energy_loss_geant.ipynb  energy_loss_gsf.ipynb  gdml_telescope.py  generate_gdml_file.py  gsf.py  plotting_pipe.py  run_gsf.sh  scan_smearing.sh  telescope-digi-smearing-config.json
benchmark/: gprof_gsf_odd.sh  gsf_benchmark.py  gsf_odd.py  make_data.py  make_data.sh  perf_cpp_benchmark.sh  perf_gsf_odd.sh  perf_python_benchmark.sh  process_perf.sh
benchmark/gsf_benchmark/: CMakeLists.txt  main.cpp
benchmark/notebooks/: geometry_selection.ipynb  reduction_timing.ipynb
benchmark/python/: gsf_benchmark.py  shorten_templates.py
config/odd/: odd-digi-smearing-config.json
config/sphenix/: geo-selection-silicon.json  sPHENIXActsGeom.root  sphenix-digi-smearing-config-realistic.json  sphenix-digi-smearing-config-test.json
config/telescope/: telescope-seeding-config.json
gsf_debugger/: gsf_debugger.py
gsf_debugger/src/: drawers.py  main.py  plotting_pipe.py  processors.py  widgets.py
notebooks/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  analyse_atlas_parameterization.ipynb  analyse_sweep.ipynb  analyse_with_pandas.ipynb  analysis_core_tail.ipynb  betheheitler_dist.ipynb  bootstrap.ipynb  compare_cmps_1_20.ipynb  energy_loss_geant.ipynb  energy_loss_gsf.ipynb  gsf_components.ipynb  gsfanalysis  invalid_bha.ipynb  large_statistics.ipynb  mode.ipynb  spline.ipynb  standard_error_of_the_mean.ipynb  test_gaussian_symlog.ipynb  test_root_to_pandas.ipynb
output/c1_n20/: config.json
output/c20_n20/: config.json
outputs/c1_n20/: config.json
outputs/c20_n20/: config.json
python/: core_tail_analysis.py  default_analysis.py  gsf.py  gsf_utils.py  kf.py  make_pdfreport.py  plotting_pipe.py  short_analysis.py  sweep_gsf.py
python/gsfanalysis/: comparison_plot.py  core_tail_utils.py  pandas_import.py  parallel_coordinates.py  statistics.py  trackstates_plots.py  tracksummary_plots.py  utils.py
python/gsfanalysis/lib/: CMakeLists.txt  mode.cpp
workflows/analysis/: Snakefile  clean.sh  matplotlibrc
workflows/analysis/config/: config.yaml
workflows/analysis/scripts/: parameters_sweep.py  pickle.py  plot_all_residuals.py  plot_cummulative_residual.py  plot_detailed_perf.py  plot_eloss_correlation.py  plot_fit_failures_outlier.py  plot_momentum_last_surface.py  plot_outliers_holes.py  plot_residuals_2d_hist.py  plot_resolution_muon_vs_electron.py  plot_sweep.py  run_gsf.py  run_kf.py  simulation.py  utils.py  utils_fitting.py  utils_plotting.py
workflows/benchmark/: Snakefile
workflows/benchmark/config/: config.yaml
workflows/benchmark/cpp_benchmark/: CMakeLists.txt  common.hpp  gsf.cpp  kf.cpp  main.cpp
workflows/benchmark/scripts/: component_time_plot.py  gsf_benchmark.py  make_data.py  plot_pie_charts.py  plot_timing_gsf_vs_kf.py  remove_namespaces.py  shorten_templates.py  utils.py
workflows/zmass/: Snakefile
workflows/zmass/config/: config.yaml
workflows/zmass/notebooks/: z0mass.ipynb
workflows/zmass/scripts/: compute_zmass.py  fit_zmass_root.py  fit_zmass_root_with_gauss.py  fit_zmass_scipy.py  gsfanalysis  simulation.py  utils.py
zmass/: README.md  run.py
zmass/notebooks/: gsfanalysis  inivestigate_pythia.ipynb  z0 mass.ipynb
